--- a/danusys-platform/src/main/resources/templates/fragments/default/header.html
+++ b/danusys-platform/src/main/resources/templates/fragments/default/header.html
@@ -1,7 +1,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="headerFragment">
     <header>
-        <h1 class="logo"><i><img src="/images/default/headerMenu.svg"></i>Title</h1>
+        <!-- <h1 class="logo"><i><img src="/images/default/headerMenu.svg"></i>Title</h1> -->
+        <h1><img src="/images/default/logo.svg">광명 IoT 플랫폼</h1>
         <ul class="gnm">
             <li id="dashboard"><a href="/pages/dashboard">대시보드</a></li>
             <li id="mntr"><a href="/pages/mntr">관제</a></li>
