--- a/danusys-commons-ui/src/main/resources/static/css/map/map.css
+++ b/danusys-commons-ui/src/main/resources/static/css/map/map.css
@@ -12,3 +12,44 @@
     z-index: 3;
     background: #1a1b1d78;
 }
+
+.tooltip {
+    position: relative;
+    background: #3f33ff7a;
+    border-radius: 4px;
+    color: white;
+    padding: 4px 8px;
+    opacity: 0.7;
+    white-space: nowrap;
+    border: 1px solid white;
+}
+.tooltip-measure {
+    opacity: 1;
+    font-weight: bold;
+}
+.tooltip-static {
+    opacity: 1;
+    background-color: #d30018b3;
+    font-weight: bold;
+    /*color: white;*/
+}
+.tooltip-measure:before {
+    border-top: 6px solid #3f33ff7a;
+    border-right: 6px solid transparent;
+    border-left: 6px soflid transparent;
+    content: "";
+    position: absolute;
+    bottom: -6px;
+    margin-left: -7px;
+    left: 50%;
+}
+.tooltip-static:before {
+    border-top: 6px solid #d30018b3;
+    border-right: 6px solid transparent;
+    border-left: 6px soflid transparent;
+    content: "";
+    position: absolute;
+    bottom: -6px;
+    margin-left: -7px;
+    left: 50%;
+}
