--- a/danusys-platform/src/main/resources/static/css/monitoring.css
+++ b/danusys-platform/src/main/resources/static/css/monitoring.css
@@ -1,11 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
 
-
 /* default */
-.wrap{display: flex; flex-direction: column; width: 100%; height: 100%; margin: 0px; padding: 0px; background: navy;}
+.wrap{display: flex; flex-direction: column; width: 100%; height: 100%; margin: 0px; padding: 0px;}
 .mntrContainer{flex: 1; display: flex; flex-direction: row; overflow: hidden;}
-.mntrContainer .mapWrap{flex: 1; background: olive;}
+.mntrContainer .mapWrap{flex: 1; background: darkseagreen;}
 .mntrContainer .areaInfo{display: flex; flex-direction: column; width: 440px; background: #1a1b1d;}
 
 /* lnb */
@@ -50,7 +49,7 @@
 .areaTitle dd span.count{color: #3a66e5; font-size: 16px; font-weight: bold;}
 
 /* searchForm */
-.searchForm{padding: 14px; border-bottom: 2px solid #292c34;}
+.searchForm{position: relative; padding: 14px; border-bottom: 2px solid #292c34;}
 .searchForm dl{display: flex; align-items: center; justify-content: flex-start; grid-gap: 8px; height: 34px; border: 1px solid #292c34; border-radius: 4px;}
 .searchForm dl dt{display: flex; align-items: center; justify-content: flex-start; grid-gap: 8px; padding: 0px 14px; border-right: 1px solid #292c34;}
 .searchForm dl dt input{flex: 1; padding: 0px; border: none;}
@@ -62,16 +61,16 @@
 .searchForm dl dd:hover{color: #dee0e4;}
 
 /* searchFold */
-.searchFold{display: flex; flex-direction: column; grid-gap: 14px; height: auto; margin: -1px 0px 0px; padding: 14px; box-sizing: border-box; border: 1px solid #292c34;}
-.searchFold dl{height: auto; display: flex; align-items: baseline; justify-content: flex-start; grid-gap: 14px; border: none;}
-.searchFold dl dt{padding: 0px; border: none;}
+.searchFold{position: absolute; z-index: 10; display: flex; flex-direction: column; grid-gap: 14px; height: auto; margin: -1px 0px 0px; padding: 18px; box-sizing: border-box; border: 1px solid #292c34; border-bottom-left-radius: 10px; border-bottom-right-radius: 10px; background: #1a1b1d;}
+.searchFold dl{height: auto; display: flex; align-items: stretch; justify-content: flex-start; grid-gap: 14px; border: none;}
+.searchFold dl dt{padding: 0px; color: #797d87; font-weight: bold; border: none;}
 .searchFold dl dd{flex: 1;}
 .searchFold dl dd ul{flex: 1; display: flex; flex-direction: column; grid-gap: 8px;}
 .searchFold dl dd ul li{display: flex; align-items: center; justify-content: space-between;}
 
 /* searchList */
 .searchList{position: relative; flex: 1; overflow: auto; border-bottom: 2px solid #292c34;}
-.buttonTop{position: absolute; right: 10px; bottom: 10px; z-index: 10; display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 40px; background: #2a2d35; box-shadow: 0px 0px 14px rgba(0,0,0,0.6); cursor: pointer;}
+.buttonTop{float: right; position: sticky; right: 10px; bottom: 10px; z-index: 10; display: flex; align-items: center; justify-content: center; width: 40px; height: 40px; border-radius: 40px; background: #2a2d35; box-shadow: 0px 0px 14px rgba(0,0,0,0.6); cursor: pointer;}
 .buttonTop img{width: 16px; height: 16px; transform: rotate(-90deg); filter: brightness(0) invert(1); opacity: 0.5;}
 .searchList:nth-last-child(1){border: none;}
 .searchList dl{padding: 14px; box-sizing: border-box; border-bottom: 1px solid #292c34; line-height: 20px; cursor: pointer;}
@@ -90,7 +89,7 @@
 .searchList dl dt i img{width: 20px; height: 20px;}
 .searchList dl dd{display: flex; align-items: center; justify-content: space-between; color: #797d87;}
 
-.searchList dl dd span{height: 28px; line-height: 26px; padding: 0px 8px; border: 1px solid red; border-radius: 28px;}
+.searchList dl dd span{height: 28px; line-height: 26px; padding: 0px 8px; border-radius: 28px;}
 .searchList dl dd span.state{width:82px; height:26px; line-height:22px; color:#797d87; font-size:13px; font-weight:normal; text-align:center; border:2px solid #797d87; border-radius:26px;}
 .searchList dl dd span.state.state1{color:#ff4f4f; border:2px solid #f04242;}
 .searchList dl dd span.state.state2{color:#f99b22; border:2px solid #f99b22;}
@@ -131,12 +130,25 @@
 .areaBusStationState dl dt i img{width: 16px; height: 16px;}
 .areaBusStationState dl dd{display: flex; align-items: baseline; justify-content: center; grid-gap: 4px; font-size: 20px;}
 .areaBusStationState dl dd span{font-size: 14px;}
+.areaBusStationState dl dd.blue{color: #3a66e5;}
 .areaBusStationState dl dd.green{color: #3ad274;}
+.areaBusStationState dl dd.yellow{color: #f99b22;}
+.areaBusStationState dl dd.red{color: #ff4f4f;}
 .areaInfoOff{display: none !important;}
 
-
-
-
+/* map */
+.mapWrap{position:relative; flex:1; height:100%; background:dodgerblue;}
+.mapButton{position:absolute; top:10px; right:10px; display:flex; flex-direction:column; align-items:flex-end; z-index:2;}
+.mapButton .mapType{display:flex; align-items:center; column-gap:4px; margin:0px 0px 10px 0px; padding:4px; background:#1e1f23; border-radius:6px;}
+.mapButton .mapType li{height:30px; line-height:28px; padding:0px 10px; text-align:center; color:#7f8491; border-radius:4px; cursor:pointer;}
+.mapButton .mapType li:hover{color:#FFF; background: #3a66e5;}
+.mapButton .mapType li:active{color:#FFF; font-weight:bold; background:#3a66e5; border-radius:4px;}
+.mapButton .mapOptions{overflow:hidden; display:flex; flex-direction:column; align-items:center; justify-content:center; width:40px; background:#1e1f23; border-radius:6px;}
+.mapButton .mapOptions li{display:flex; align-items:center; justify-content:center; width:100%; height:40px; border-bottom:1px solid #2b2f3a; cursor:pointer;}
+.mapButton .mapOptions li:nth-last-child(1){border:none;}
+.mapButton .mapOptions li:hover{background:#23252b;}
+.mapButton .mapOptions li:hover img{filter:brightness(1.4);}
+.mapButton .mapOptions li img{width:20px; height:20px;}
 
 
 
