--- a/danusys-platform/src/main/resources/templates/view/pages/mntr.html
+++ b/danusys-platform/src/main/resources/templates/view/pages/mntr.html
@@ -4,25 +4,37 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout/layout_mntr">
 
-<th:block layout:fragment="css">
-    <link rel="stylesheet" type="text/css" href="/css/default/monitoring.css">
-</th:block>
-
 <th:block layout:fragment="menu">
     <aside class="lnb">
         <ul>
-            <li class="active" value="smartPower">MENU<br>1</li>
-            <li>MENU<br>2</li>
-            <li>MENU<br>3</li>
-            <li>MENU<br>4</li>
-            <li>MENU<br>5</li>
+            <li class="active" data-value="smartPower">스마트분전함</li>
+            <li data-value="drone">드론</li>
+            <li data-value="">MENU<br>3</li>
+            <li data-value="">MENU<br>4</li>
+            <li data-value="">MENU<br>5</li>
         </ul>
     </aside>
 </th:block>
 
 <th:block layout:fragment="content">
-    <th:block th:insert="/view/commons/map"></th:block>
+    <!--<th:block th:insert="/view/commons/map"></th:block>-->
     <div id="map" class="mapWrap">
+        <div class="mapButton">
+            <ul class="mapType">
+                <li>지도</li>
+                <li>스카이뷰</li>
+            </ul>
+            <ul class="mapOptions">
+                <li data-value="roadView" title="로드뷰"><img src="/images/default/mapRoadview.svg"></li>
+                <li data-value="plus" title="확대"><img src="/images/default/mapPlus.svg"></li>
+                <li data-value="minus" title="축소"><img src="/images/default/mapMinus.svg"></li>
+                <li data-value="layer" title="레이어"><img src="/images/default/mapLayer.svg"></li>
+                <li data-value="distance" title="거리측정"><img src="/images/default/mapDistance.svg"></li>
+                <li data-value="measure" title="면적측정"><img src="/images/default/mapMeasure.svg"></li>
+                <li data-value="radius" title="반경측정"><img src="/images/default/mapRadius.svg"></li>
+                <li data-value="eraser" title="지우기"><img src="/images/default/mapEraser.svg"></li>
+            </ul>
+        </div>
         <div id="mouse-position"></div>
     </div>
 </th:block>
